# Scientific-Paper-RAG

./: 1.vectordb_chunking.ipynb  2.basicRAGpipeline.ipynb  README.md  day1.ipynb  day2.ipynb  day3.ipynb  et --hard 084372392f214101a0f275ed8b62d82f6075dc78  evaluator.py  pyproject.toml
chunk_cache/: Alex Chen.json  Alex Harper.json  Alex Thomson.json  Amanda Foster.json  Avery Lancaster.json  Bizllm.json  Brandon Walker.json  Carllm.json  Carlos Rodriguez.json  Claimllm.json  Contract with Advantage Medical Coverage for Healthllm.json  Contract with Apex Reinsurance for Rellm - AI-Powered Enterprise Reinsurance Solution.json  Contract with Atlantic Risk Solutions for Bizllm.json  Contract with Belvedere Insurance for Markellm.json  Contract with BrightWay Solutions for Markellm.json  Contract with ConnectInsure Agency for Markellm.json  Contract with Continental Commercial Group for Bizllm.json  Contract with DriveSmart Insurance for Carllm.json  Contract with EverGuard Insurance for Rellm - AI-Powered Enterprise Reinsurance Solution.json  Contract with Evergreen Life Insurance for Lifellm.json  Contract with FastTrack Insurance Services for Claimllm.json  Contract with Fortress Business Underwriters for Bizllm.json  Contract with GlobalRe Partners for Rellm.json  Contract with GreenField Holdings for Markellm.json  Contract with GreenValley Insurance for Homellm.json  Contract with Greenstone Insurance for Homellm.json  Contract with Guardian Life Partners for Lifellm.json  Contract with Harmony Health Plans for Healthllm.json  Contract with Heritage Life Assurance for Lifellm.json  Contract with Metropolitan Life Group for Lifellm.json  Contract with National Claims Network for Claimllm.json  Contract with Pinnacle Insurance Co. for Homellm.json  Contract with Premier Adjusters Inc. for Claimllm.json  Contract with Rapid Claims Associates for Claimllm.json  Contract with Roadway Insurance Inc. for Carllm.json  Contract with SafeHaven Property Insurance for Homellm.json  (+40 more)
src/: eval.py  (+14 more)
(+129 files in other folders)
