[project]
name = "scientific-paper-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.20.0",
    "huggingface-hub>=1.23.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]
