[project]
name = "scientific-paper-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.41.0",
    "chromadb>=1.5.9",
    "cohere>=7.0.5",
    "docling>=2.112.0",
    "gradio>=6.20.0",
    "huggingface-hub>=1.23.0",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "llama-parse>=0.6.94",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]
